# intellikeep_tag

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.production.defaults  sdkconfig.seeed.defaults
components/tag_ble/: CMakeLists.txt  tag_ble.c
components/tag_ble/include/: tag_ble.h
components/tag_config/: CMakeLists.txt  tag_config.c
components/tag_config/include/: tag_config.h
components/tag_hw/: CMakeLists.txt  tag_hw.c
components/tag_hw/include/: tag_hw.h
docs/: next-rev-hardware-notes.md  nfc-provisioning-handoff.md
main/: CMakeLists.txt  tag_main.c
scripts/: build_variants.sh  flash_demo_tag.sh  flash_production_tag.sh  flash_seeed_esp32c3.sh  flash_variant.sh
